# pyro

./: .clang-format  .gitignore  .gitmodules  Changelog  Doxyfile  LICENSE  README.md  meson.build  meson_options.txt
kernel/: meson.build
kernel/include/: kernel.hpp
kernel/include/arch/: arch.h
kernel/include/arch/x86_64/: registers.h  x86.h
kernel/include/arch/x86_64/cpu/: cpuid.hpp  gdt.hpp  idt.hpp  interrupts.hpp  pic.hpp
kernel/include/arch/x86_64/dev/: serials.hpp
kernel/include/boot/: bootinfo.h
kernel/include/libc/: assert.h  ctype.h  stdio.h  stdlib.h  string.h
kernel/include/libc++/: cstdarg  cstddef  cstdint
kernel/include/libc/sys/: printf_config.h  types.h
kernel/include/memory/: heap.hpp  memory.hpp  pmm.hpp  slab.hpp
kernel/include/memory/physical/: page.hpp
kernel/include/system/: compiler.h  log.h  log.hpp
kernel/include/utils/: bitmap.hpp  common.h  misc.hpp  mutex.hpp  to_string.hpp
kernel/src/: entry.c  main.cpp  meson.build
kernel/src/arch/x86_64/: linker.ld  meson.build  x86.cpp
kernel/src/arch/x86_64/cpu/: cpuid.cpp  gdt.asm  gdt.cpp  idt.cpp  interrupts.asm  interrupts.cpp  meson.build  pic.cpp
kernel/src/arch/x86_64/dev/: meson.build  serials.cpp
kernel/src/libc/: assert.c  ctype.c  meson.build  stdio.c
kernel/src/libc/stdlib/: abs.c  atoi.c  div.c  memalign.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
kernel/src/libc/string/: mem.c  string.c
kernel/src/memory/: heap.cpp  meson.build  pmm.cpp  slab.cpp
kernel/src/misc/: abi.cpp  meson.build
kernel/src/system/: c_log.cpp  log.cpp  meson.build
kernel/src/utils/: bitmap.cpp  meson.build  misc.cpp  mutex.cpp  to_string.cpp
meta/: limine.cfg  x86_64-clang.cross-file  x86_64-gcc.cross-file
subprojects/: libstdcxx.wrap  limine.wrap  ovmf_binaries.wrap  printf.wrap
subprojects/packagefiles/limine/: meson.build  meson_options.txt
subprojects/packagefiles/ovmf_binaries/: meson.build
subprojects/packagefiles/printf/: meson.build
